--- a/index.html
+++ b/index.html
@@ -196,6 +196,38 @@
                 </div>
             </div>
             <div class="owl-carousel-item position-relative">
+                <img class="img-fluid" src="img/geoRef_Banner.png" alt="">
+                <div class="position-absolute top-0 start-0 w-100 h-100 d-flex align-items-center" style="background: rgba(24, 29, 56, .7);">
+                    <div class="container">
+                        <div class="row justify-content-start">
+                            <div class="col-sm-10 col-lg-8">
+                                <h5 class="text-primary text-uppercase mb-3 animated slideInDown">E-Modules</h5>
+                                <h1 class="display-3 text-white animated slideInDown">Georeferencing Using QGIS</h1>
+                                <p class="fs-5 text-white mb-4 pb-2">Simple Starter Module For Beginners with steps to help in geo-referencing the cadastral maps</p>
+                                <a href="./GeoReference_Using_QGIS_ReadMore.html" class="btn btn-primary py-md-3 px-md-5 me-3 animated slideInLeft">Read More</a>
+                                <a href="./CoursesContent/GeoReference_Using_QGIS.html" target="_blank" class="btn btn-light py-md-3 px-md-5 animated slideInRight">View Now</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <!-- <div class="owl-carousel-item position-relative">
+                <img class="img-fluid" src="img/qgis.png" alt="">
+                <div class="position-absolute top-0 start-0 w-100 h-100 d-flex align-items-center" style="background: rgba(24, 29, 56, .7);">
+                    <div class="container">
+                        <div class="row justify-content-start">
+                            <div class="col-sm-10 col-lg-8">
+                                <h5 class="text-primary text-uppercase mb-3 animated slideInDown">E-Modules</h5>
+                                <h1 class="display-3 text-white animated slideInDown">Basics of QGIS</h1>
+                                <p class="fs-5 text-white mb-4 pb-2">An hands on, beginner friendly guide to start your journey in the famous GIS software tool, QGIS</p>
+                                <a href="./Basics_QGIS_ReadMore.html" class="btn btn-primary py-md-3 px-md-5 me-3 animated slideInLeft">Read More</a>
+                                <a href="#" class="btn btn-secondary py-md-3 px-md-5 animated slideInRight noHand">View Now</a><span class="badge rounded-pill text-bg-info">Coming Soon!</span>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div> -->
+            <div class="owl-carousel-item position-relative">
                 <img class="img-fluid" src="img/carousel-3.jpg" alt="">
                 <div class="position-absolute top-0 start-0 w-100 h-100 d-flex align-items-center" style="background: rgba(24, 29, 56, .7);">
                     <div class="container">
@@ -678,7 +710,7 @@
 
 
     <!-- JavaScript Libraries -->
-    <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
+    <script src="lib/jquery/jquery-3.4.1.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.bundle.min.js"></script>
     <script src="lib/wow/wow.min.js"></script>
     <script src="lib/easing/easing.min.js"></script>
